--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.10.0",
     "@vite-pwa/nuxt": "^0.10.6",
     "@vueuse/nuxt": "^12.4.0",
     "flowbite": "^2.5.2",
     "next-auth": "~4.21.1",
     "nuxt": "^3.14.1592",
+    "pinia": "^2.3.1",
     "vue": "latest",
     "vue-router": "latest"
   },
